# amq-protocol-native

./: .gitignore  AGENTS.md  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  amq-protocol-native.gemspec
.github/workflows/: ci.yml  release.yml
benchmark/: compare.rb  compare_local.rb  frame_encoding.rb  method_encoding.rb  run.rb  table_encoding.rb
ext/amq_protocol_native/: Cargo.toml  extconf.rb
ext/amq_protocol_native/src/: error.rs  frame.rs  lib.rs  methods.rs  table.rs  types.rs
lib/: amq-protocol-native.rb
lib/amq/: protocol.rb
lib/amq/protocol/: version.rb
spec/: spec_helper.rb
spec/amq/protocol/: frame_spec.rb  methods_spec.rb  table_spec.rb
